samples/_failures_safe/1761302525_9908e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5e0a9d1.c: In function ‘main’:
./samples/SAFE/__tmp_f5e0a9d1.c:152:11: error: expected ‘;’ at end of input
  152 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_f5e0a9d1.c:152:5: error: expected declaration or statement at end of input
  152 |     printf
      |     ^~~~~~
